--- a/task4/rally.html
+++ b/task4/rally.html
@@ -7,45 +7,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Link to external stylesheet -->
     <!-- <link rel="stylesheet" href="styles.css" /> -->
-     <link rel="stylesheet" href="tail.css" />
+    <link rel="stylesheet" href="tail.css" />
   </head>
   <body>
-    <header class="f1-header">
-      <h1 id="title" class="center-text">Formuła 1 i nie tylko...</h1>
-      <nav class="nav-container">
-        <ul class="menu">
-          <li><a href="index.html">Historia Formuły 1</a></li>
-          <li><a href="hall_of_fame.html">Galeria sław</a></li>
-          <li><a href="rally.html">Sekcja rajdowa</a></li>
+    <header class="bg-red-600 text-white p-5 mb-5">
+      <h1 id="title">Formuła 1 i nie tylko...</h1>
+      <nav>
+        <ul
+          class="menu flex justify-center items-center list-none p-0 my-2 transition-opacity duration-700"
+        >
+          <li class="mx-2">
+            <a href="index.html" class="text-white no-underline font-bold hover:underline"
+              >Historia Formuły 1</a
+            >
+          </li>
+          <li class="mx-2">
+            <a href="hall_of_fame.html" class="text-white no-underline font-bold hover:underline"
+              >Galeria sław</a
+            >
+          </li>
+          <li class="mx-2">
+            <a href="rally.html" class="text-white no-underline font-bold hover:underline"
+              >Sekcja rajdowa</a
+            >
+          </li>
         </ul>
         <!-- Justification control buttons -->
-        <div class="justify-controls">
-          <button type="button" onclick="justifyMenu('flex-start')">Left</button>
-          <button type="button" onclick="justifyMenu('center')">Center</button>
-          <button type="button" onclick="justifyMenu('flex-end')">Right</button>
-          <button type="button" onclick="justifyMenu('space-between')">Evenly</button>
+        <div class="flex flex-row mt-2 text-center justify-evenly">
+          <button
+            type="button"
+            onclick="justifyMenu('flex-start')"
+            class="flex-auto bg-white text-red-600 border border-red-600 px-3 py-1 mx-1 rounded transition-colors duration-500 hover:text-gray-700 hover:border-gray-700 hover:cursor-pointer"
+          >
+            Left
+          </button>
+          <button
+            type="button"
+            onclick="justifyMenu('center')"
+            class="flex-auto bg-white text-red-600 border border-red-600 px-3 py-1 mx-1 rounded transition-colors duration-500 hover:text-gray-700 hover:border-gray-700 cursor-pointer"
+          >
+            Center
+          </button>
+          <button
+            type="button"
+            onclick="justifyMenu('flex-end')"
+            class="flex-auto bg-white text-red-600 border border-red-600 px-3 py-1 mx-1 rounded transition-colors duration-500 hover:text-gray-700 hover:border-gray-700 hover:cursor-pointer"
+          >
+            Right
+          </button>
+          <button
+            type="button"
+            onclick="justifyMenu('space-between')"
+            class="flex-none bg-white text-red-600 border border-red-600 px-3 py-1 mx-1 rounded transition-colors duration-500 hover:text-gray-700 hover:border-gray-700 hover:cursor-pointer"
+          >
+            Evenly
+          </button>
         </div>
       </nav>
-      <script>
-        // Select the navigation ul (menu)
-        const menu = document.querySelector(".menu");
-
-        // Function to justify menu
-        function justifyMenu(justification) {
-          menu.style.opacity = "0";
-          setTimeout(() => {
-            menu.style.justifyContent = justification;
-            menu.style.opacity = "1";
-          }, 700);
-        }
-      </script>
     </header>
-    <article class="main-content">
-      <section class="center-text">
-        <h2>Sekcja rajdowa</h2>
+    <script>
+      // Select the navigation ul (menu)
+      const menu = document.querySelector(".menu");
+
+      // Function to justify menu
+      function justifyMenu(justification) {
+        menu.style.opacity = "0";
+        setTimeout(() => {
+          menu.style.justifyContent = justification;
+          menu.style.opacity = "1";
+        }, 700);
+      }
+    </script>
+    <article class="a-base">
+      <section class="text-center mb-5">
+        <h2 class="text-3xl font-bold">Sekcja rajdowa</h2>
       </section>
-      <section class="video-section light-shadow">
-        <p>
+      <section class="s-base mb-0">
+        <p class="p-base">
           Rajdy samochodowe to dynamiczna dyscyplina sportu motorowego, w której załogi składające
           się z kierowcy i pilota rywalizują na zamkniętych odcinkach specjalnych. Trasy rajdowe
           prowadzą przez różnorodne nawierzchnie, takie jak asfalt, szuter czy śnieg, co sprawia, że
@@ -54,11 +92,13 @@
           doskonałej znajomości trasy. Zachęcam do obejrzenia poniższych filmów, które przedstawiają
           namiastkę emocji towarzyszących rywalizacji w rajdach.
         </p>
-        <div class="video-gallery">
-          <div class="video-box">
+        <div
+          class="flex flex-col-reverse md:flex-col border-3 border-dashed border-gray-800 rounded-lg p-3"
+        >
+          <div
+            class="video-box relative m-7 transition-transform duration-300 ease-in-out hover:scale-105"
+          >
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/HwyRS_6Uqn0?si=LIP7hT1_Q7TKwpzU"
               title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -66,10 +106,10 @@
               allowfullscreen
             ></iframe>
           </div>
-          <div class="video-box">
+          <div
+            class="video-box relative m-7 transition-transform duration-300 ease-in-out hover:scale-105"
+          >
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/mkhK6FOcHPY?si=PqA8XUORtJxKTq9d"
               title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -77,10 +117,10 @@
               allowfullscreen
             ></iframe>
           </div>
-          <div class="video-box">
+          <div
+            class="video-box relative m-7 transition-transform duration-300 ease-in-out hover:scale-105"
+          >
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/V4Asnh_2OF4?si=-xofYiK488FIu4L6"
               title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -91,7 +131,7 @@
         </div>
       </section>
     </article>
-    <footer class="center-text">
+    <footer>
       <p>Pozdrawiamy fanów Formuły 1!</p>
     </footer>
   </body>
